# src/routes/index.ts
@@ -1,5 +1,6 @@
 import express from 'express';
 
+import commentsV1 from '@routes/v1/comments';
 import ordersV1 from '@routes/v1/orders';
 import petsV1 from '@routes/v1/pets';
 import reviewV1 from '@routes/v1/reviews';
@@ -17,5 +18,6 @@ router.use('/v1', sitterV1);
 router.use('/v1', petsV1);
 router.use('/v1', tasksV1);
 router.use('/v1', reviewV1);
+router.use('/v1', commentsV1);
 
 export default router;
