# src/swagger.json
@@ -2333,6 +2333,427 @@
           }
         }
       }
+    },
+    "/api/v1/tasks/{task_id}/comments": {
+      "post": {
+        "tags": [
+          "Comments"
+        ],
+        "summary": "新增：評論",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "name": "task_id",
+            "in": "path"
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "text": {
+                    "type": "string"
+                  },
+                  "parent_comment_id": {
+                    "type": "string"
+                  }
+                },
+                "required": [
+                  "text"
+                ],
+                "description": "建立評論",
+                "example": {
+                  "text": "This is a sample comment",
+                  "parent_comment_id": "60d21b4667d0d8992e610c86"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Create comment successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Task not found"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Comments"
+        ],
+        "summary": "取得：評論列表",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "name": "task_id",
+            "in": "path"
+          },
+          {
+            "schema": {
+              "type": "string"
+            },
+            "required": false,
+            "name": "continueAfterId",
+            "in": "query"
+          },
+          {
+            "schema": {
+              "type": "string",
+              "default": "3"
+            },
+            "required": false,
+            "name": "pageSize",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "comments": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "string"
+                          },
+                          "parent_comment_id": {
+                            "type": "string"
+                          },
+                          "text": {
+                            "type": "string"
+                          },
+                          "author_id": {
+                            "type": "string"
+                          },
+                          "task_id": {
+                            "type": "string"
+                          },
+                          "created_at": {
+                            "type": "string",
+                            "format": "date-time"
+                          },
+                          "author": {
+                            "type": "object",
+                            "properties": {
+                              "id": {
+                                "type": "string"
+                              },
+                              "real_name": {
+                                "type": "string"
+                              },
+                              "avatar": {
+                                "type": "string"
+                              },
+                              "nickname": {
+                                "type": "string"
+                              }
+                            },
+                            "required": [
+                              "id",
+                              "real_name"
+                            ]
+                          }
+                        },
+                        "required": [
+                          "id",
+                          "text",
+                          "author_id",
+                          "task_id",
+                          "created_at",
+                          "author"
+                        ],
+                        "example": {
+                          "id": "60d21b4667d0d8992e610c86",
+                          "parent_comment_id": "60d21b4667d0d8992e610c87",
+                          "text": "This is a sample comment",
+                          "author_id": "60d21b4667d0d8992e610c85",
+                          "task_id": "60d21b4667d0d8992e610c84",
+                          "created_at": "2022-01-01T00:00:00.000Z",
+                          "author": {
+                            "id": "60d21b4667d0d8992e610c85",
+                            "real_name": "John Doe",
+                            "avatar": "https://example.com/avatar.jpg",
+                            "nickname": "Johnny"
+                          }
+                        }
+                      }
+                    },
+                    "endOfPaginationReached": {
+                      "type": "boolean"
+                    }
+                  },
+                  "required": [
+                    "comments",
+                    "endOfPaginationReached"
+                  ]
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Comments not found"
+          }
+        }
+      }
+    },
+    "/api/v1/comments/{comment_id}/replies": {
+      "get": {
+        "tags": [
+          "Comments"
+        ],
+        "summary": "取得：評論回覆列表",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "name": "comment_id",
+            "in": "path"
+          },
+          {
+            "schema": {
+              "type": "string"
+            },
+            "required": false,
+            "name": "continueAfterId",
+            "in": "query"
+          },
+          {
+            "schema": {
+              "type": "string",
+              "default": "3"
+            },
+            "required": false,
+            "name": "pageSize",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "comments": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "string"
+                          },
+                          "parent_comment_id": {
+                            "type": "string"
+                          },
+                          "text": {
+                            "type": "string"
+                          },
+                          "author_id": {
+                            "type": "string"
+                          },
+                          "task_id": {
+                            "type": "string"
+                          },
+                          "created_at": {
+                            "type": "string",
+                            "format": "date-time"
+                          },
+                          "author": {
+                            "type": "object",
+                            "properties": {
+                              "id": {
+                                "type": "string"
+                              },
+                              "real_name": {
+                                "type": "string"
+                              },
+                              "avatar": {
+                                "type": "string"
+                              },
+                              "nickname": {
+                                "type": "string"
+                              }
+                            },
+                            "required": [
+                              "id",
+                              "real_name"
+                            ]
+                          }
+                        },
+                        "required": [
+                          "id",
+                          "text",
+                          "author_id",
+                          "task_id",
+                          "created_at",
+                          "author"
+                        ],
+                        "example": {
+                          "id": "60d21b4667d0d8992e610c86",
+                          "parent_comment_id": "60d21b4667d0d8992e610c87",
+                          "text": "This is a sample comment",
+                          "author_id": "60d21b4667d0d8992e610c85",
+                          "task_id": "60d21b4667d0d8992e610c84",
+                          "created_at": "2022-01-01T00:00:00.000Z",
+                          "author": {
+                            "id": "60d21b4667d0d8992e610c85",
+                            "real_name": "John Doe",
+                            "avatar": "https://example.com/avatar.jpg",
+                            "nickname": "Johnny"
+                          }
+                        }
+                      }
+                    },
+                    "endOfPaginationReached": {
+                      "type": "boolean"
+                    }
+                  },
+                  "required": [
+                    "comments",
+                    "endOfPaginationReached"
+                  ]
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Comment replies not found"
+          }
+        }
+      }
+    },
+    "/api/v1/comments/{comment_id}": {
+      "patch": {
+        "tags": [
+          "Comments"
+        ],
+        "summary": "更新：評論",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "name": "comment_id",
+            "in": "path"
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "text": {
+                    "type": "string"
+                  }
+                },
+                "required": [
+                  "text"
+                ],
+                "description": "更新評論",
+                "example": {
+                  "text": "This is an updated comment"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Update comment successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Comment not found"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Comments"
+        ],
+        "summary": "刪除：評論",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "name": "comment_id",
+            "in": "path"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Delete comment successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Comment not found"
+          }
+        }
+      }
     }
   }
 }
